updated navigation and removed the fixed position on mobile to ensure the entire navigation can be viewed on all small devices

--- a/assets/scss/globals/_body.scss
+++ b/assets/scss/globals/_body.scss
@@ -45,8 +45,6 @@ main:focus {
 }
 
 .site-main {
-  margin-top: $mobile-header;
-
   @include breakpoint(md) {
     margin-top: $desktop-header;
   }
